tdf#98798: MM Wizard should not leave MM toolbar visible when canceled

This remembers now the state of the MM toolbar before the MM wizard was
started and reset the visiblity of the toolbar to that state when
canceled.

Change-Id: I390feae3287c10d3d0c93dbfa64037229c5327e2
Reviewed-on: https://gerrit.libreoffice.org/27359
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Reviewed-by: Björn Michaelsen <bjoern.michaelsen@canonical.com>
Tested-by: Björn Michaelsen <bjoern.michaelsen@canonical.com>
(cherry picked from commit 20245ba9755e1c0199359c3462eff974f33c1bec)